# sim-res-v2

./: CMakeLists.txt  difusion_2d_fvm.py  difusion_2d_fvm_grilla_log.ipynb  difusion_2d_fvm_grilla_log.py  difusion_2d_fvm_v1.py  recompile.sh  reservorio_2d_fvm.py  simular.py  solver.cpp
books_fvm/: print_pages.ipynb
